--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="tk.ghostfilms.toDo">
+    package="tk.ghostFilms.toDo">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ToDoApplication"
         tools:ignore="AllowBackup">
-        <activity android:name=".MainActivity">
+        <activity android:name="tk.ghostFilms.toDo.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
